UNIFIED FIX: Applied CORS and 405 fixes to both root src and backend folders